# MIMIC-Multipurpose-Intelligent-Molecular-Information-Catalyst-

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  GITHUB_RELEASE_COMMANDS.md  LICENSE.txt  MEMORY_SYSTEM_CHANGES.md  MimicAI-StopAll.bat  QUICKSTART.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.2.1.md  UPDATE_PRODUCTION_BACKEND.bat  create-icons.cjs  launch-mimic.bat  launch-mimic.py  package-lock.json  package.json  update_backend.ps1
app/: .env.example  index.html  package-lock.json  package.json  start-mimic.bat  start-mimic.sh  vite.config.ts
scripts/: RELEASE-NOTES.md  RELEASE-README.txt  build-installer.ps1  cleanup-build.ps1  diagnose.ps1  package-release.ps1  (+3 more)
src-tauri/: Cargo.toml  installer.nsi  start-backends.bat  start-backends.ps1  tauri.conf.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh  installer.nsi
src-tauri/resources/: install-deps.bat
src-tauri/resources/backend/: .gitignore  .gitkeep  README.md  debug_server.py  detect_watermark.py  memory_tools.py  persona_rules.py  requirements.txt  start_server.bat  streaming_tts.py  tts_server_styletts2.py  tts_server_unified.py  watermarker.py
src-tauri/resources/default_persona/: voice.json
src-tauri/resources/vrma/: 06_CossackDance.vrma  06_peace2.vrma  10_falling_down_defeated.vrma  12_jikaiyokoku.vrma  15_sanpai.vrma  17_high_five.vrma
src-tauri/resources/vrma/Idle/: 08_right_side_peekaboo.vrma  Idle_walking.vrma
src-tauri/src/: default_assets.rs  dependency_manager.rs  license_keygen.rs  license_manager.rs  main.rs  setup.rs  vrm_library.rs
(+91 files in other folders)
